[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/StarGameHover.png" type="Texture" id=1]
[ext_resource path="res://Assets/StarGame.png" type="Texture" id=2]
[ext_resource path="res://Assets/ThelizardWizard.png" type="Texture" id=3]
[ext_resource path="res://Assets/Exit.png" type="Texture" id=4]
[ext_resource path="res://Assets/ExitHover.png" type="Texture" id=5]
[ext_resource path="res://StartScreen.gd" type="Script" id=6]
[ext_resource path="res://Assets/BG_COPIED_AND_ALTERED.png" type="Texture" id=7]
[ext_resource path="res://Stages/infobook.png" type="Texture" id=8]

[node name="StartScreen" type="Node"]
script = ExtResource( 6 )

[node name="Background Texture" type="Sprite" parent="."]
position = Vector2( 639.777, 319.139 )
texture = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 21.4845
margin_top = 259.133
margin_right = 2591.48
margin_bottom = 627.133
rect_scale = Vector2( 2, 2 )
custom_constants/separation = 43
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="VBoxContainer"]
margin_right = 2569.0
margin_bottom = 38.0
focus_neighbour_top = NodePath("../ExitButton")
focus_neighbour_bottom = NodePath("../ExitButton")
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 1 )

[node name="ExitButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 81.0
margin_right = 2569.0
margin_bottom = 121.0
focus_neighbour_top = NodePath("../StartButton")
focus_neighbour_bottom = NodePath("../StartButton")
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="Instructions" type="TextureButton" parent="VBoxContainer"]
margin_top = 164.0
margin_right = 2569.0
margin_bottom = 196.0
texture_normal = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = 1298.0
margin_bottom = -218.0
rect_scale = Vector2( 0.491563, 0.549109 )
custom_constants/margin_right = 0
custom_constants/margin_top = 100
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 100.0
margin_right = 2570.0
margin_bottom = 402.0
size_flags_horizontal = 4
custom_constants/separation = 115

[node name="Title Image" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 2570.0
margin_bottom = 246.0
texture = ExtResource( 3 )

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Instructions" to="." method="_on_Instructions_pressed"]
